# socket_proxy

./: README.md
app/: CMakeLists.txt
app/include/: mdb_proxy.h  mdb_proxy_enum.h  queue_mgr.h
app/socket_proxy/: makefile
app/socket_proxy/include/: mdb_proxy_sockapi.h  mdb_proxy_socknotify.h
app/socket_proxy/src/: mdb_proxy_sockapi.cpp
app/source/: main.cpp  mdb_proxy.cpp
socket_proxy/: CMakeLists.txt  Makefile.bak
socket_proxy/bak/: __aiob_dll_version_for_public_socket_proxy.cpp
socket_proxy/src/: mdb_proxy_sockapi.cpp
